; ModuleID = '/home/carl/AnghaBench/radare2/libr/main/extr_radare2.c_get_file_in_cur_dir.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/main/extr_radare2.c_get_file_in_cur_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @get_file_in_cur_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_file_in_cur_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i8* @r_file_basename(i8* %4)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @r_file_exists(i8* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @r_file_is_directory(i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %9
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @r_file_abspath(i8* %14)
  store i8* %15, i8** %2, align 8
  br label %17

16:                                               ; preds = %9, %1
  store i8* null, i8** %2, align 8
  br label %17

17:                                               ; preds = %16, %13
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @r_file_basename(i8*) #1

declare dso_local i64 @r_file_exists(i8*) #1

declare dso_local i32 @r_file_is_directory(i8*) #1

declare dso_local i8* @r_file_abspath(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
